Imported from https://Pating@github.com/Pating/linux-inject.git

--- a/project.config
+++ b/project.config
@@ -1,4 +1,23 @@
 [access]
 	inheritFrom = All-Projects
 [submit]
-	action = inherit
+[project]
+	description = Tool for injecting a shared object into a Linux process
+[access "refs/*"]
+	owner = group user/Xie Changlong (Pating)
+[access "refs/for/refs/*"]
+	label-Code-Review = -2..+2 group user/Xie Changlong (Pating)
+	label-Verified = -1..+1 group user/Xie Changlong (Pating)
+	push = group user/Xie Changlong (Pating)
+	read = group user/Xie Changlong (Pating)
+	rebase = group user/Xie Changlong (Pating)
+	removeReviewer = group user/Xie Changlong (Pating)
+	submit = group user/Xie Changlong (Pating)
+[access "refs/heads/*"]
+	create = group user/Xie Changlong (Pating)
+	push = +force group user/Xie Changlong (Pating)
+	pushMerge = group user/Xie Changlong (Pating)
+	read = group user/Xie Changlong (Pating)
+[access "refs/tags/*"]
+	push = group user/Xie Changlong (Pating)
+	push = +force group user/Xie Changlong (Pating)
